# metadata

./: CMakeLists.txt  CallableInfo.cpp  CallableInfo.h  CallbackInfo.h  ClassInfo.cpp  ClassInfo.h  ConstructInfo.h  MetaType.cpp  MetaType.h  MethodInfo.h  PropertyInfo.h  README.md  Util.h  Variable.cpp  Variable.h  main.cpp
